@@ -1,6 +1,7 @@
 package com.algaworks.algafood.api.assembler;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,7 +12,7 @@ import com.algaworks.algafood.domain.model.Produto;
 
 @Component
 public class ProdutoModelAssembler {
-	
+
 	@Autowired
 	private ModelMapper modelMapper;
 	
@@ -19,9 +20,10 @@ public class ProdutoModelAssembler {
 		return modelMapper.map(produto, ProdutoModel.class);
 	}
 	
-	public List<ProdutoModel> toCollectionModel(List<Produto> produtos){
+	public List<ProdutoModel> toCollectionModel(List<Produto> produtos) {
 		return produtos.stream()
-				.map(produto -> toModel(produto)).toList();
+				.map(produto -> toModel(produto))
+				.collect(Collectors.toList());
 	}
-
+	
 }
